Removes jvm-opts from lein profiles.clj